<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="app_login">Login</string>
    <string name="persisty_client">Persisty client</string>
    <string name="age">age</string>
    <string name="phone">phone</string>
    <string name="adddress">addDress</string>
    <string name="name">name</string>
    <string name="save">Save</string>
    <string name="addCliente">add Cliente</string>
    <string name="campo_obrigatorio">Field required!</string>
    <string name="edit">edite</string>
    <string name="delete">delete</string>
    <string name="sucess">sucess</string>
    <string name="confirm_progress">confirm delete</string>
    <string name="confirm">confirma</string>
    <string name="yes">yes</string>
    <string name="not">not</string>
    <string name="cep">cep</string>
    <string name="find">find</string>
    <string name="tipoDeLogradouro">tipo_De_Logradouro</string>
    <string name="logradouro">logradouro</string>
    <string name="bairro">bairro</string>
    <string name="cidade">neighborhood</string>
    <string name="estado">state</string>
    <string name="tipoLogradouro">tipo_logradouro</string>
    <string name="aguardando">Aguardando</string>
    <string name="user">user</string>

</resources>
