<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/textViewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"/>

    <EditText
        android:id="@+id/textViewFone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="number"/>

    <EditText
        android:id="@+id/textViewAddDress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adddress" />

    <EditText
        android:id="@+id/textViewCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cep" />

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find"/>

</LinearLayout>